--- a/index.html
+++ b/index.html
@@ -3,64 +3,8 @@
 <meta charset=utf-8 />
 <div style="float:center">
 <div align=center>
-<iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
-<script type="text/javascript"><!--
-function song(){
-document.getElementById('Radio_station').innerHTML="<embed type='application/x-mplayer2' id='music2' pluginspage='http://www.microsoft.com/Windows/MediaPlayer/' src='"+document.getElementById('cancion').value+"' name='MediaPlayer1' width='495' height='400' enableContextMenu='0' controltype='2' showcontrols='1' showstatusbar='1' AutoStart='1'></embed>";
-}
-//-->
-</script>
-
-<div id="Radio">
-    <p><span id="Radio_station"><embed type="application/x-mplayer2" id="music1"
-pluginspage="http://www.microsoft.com/Windows/MediaPlayer/"
-src=""
-name="MediaPlayer1"
-width="495"
-height="400"
-enablecontextmenu='0'
-controltype="2"
-showcontrols="1"
-showstatusbar="1"
-autostart="1">
-</embed></span><br />
-<select id="cancion" onchange="song()" size="1" style="font-family:Arial; font-size:14;">
-        <option value="" selected />:::::::::::::::::::::::::::::::::::::::::: Επιλέξτε κανάλι Tv/Radio ::::::::::::::::::::::::::::::::::::
-
-        <option value="http://www.VoiceofGod.gr/streams/VoiceofGodHighGR.asx"/>01 TV Χριστιανικό Κανάλι Voice of God
-	<option value="http://wm1.gmlogic.com/ch-patra"/>02 TV ΦΩΣ ΕΑΕΠ Πάτρας
-	<option value="http://www.facp.org/Player/live.asx"/>04 TV FACP New York		   
-        <option value="http://wm1.gmlogic.com/eaep"/>05 Radio Χριστιανισμός link I
-        <option value="http://s1.fastcast4u.com:9326/listen.pls"/>05 Radio Χριστιανισμός link II
-        <option value="http://37.59.14.8:9942"/>06 Radio ekxe.gr
-        <option value="http://myradiostream.com/11/6510/listen.asx"/>07 Radio Αποκάλυψη
-        <option value="http://live.kanali7.com:4010"/>08 Radio Kανάλι 7 98.4 FM STEREO Cyprus -48Kbps aacPlus-
-        <option value="http://live.kanali7.com:4012"/>08 Radio Kανάλι 7 98.4 FM STEREO Cyprus -96Kbps mp3-
-        <option value="http://greghaid.no-ip.org:8000/live.mp3"/>09 Radio Η Φωνή της Αγάπης 89,3 FM Ξάνθη
-        <option value="mms://alfaomegaradio.no-ip.biz:3690"/>10 Radio TO ΑΛΦΑ ΚΑΙ ΤΟ ΩΜΕΓΑ 107,3 FM Κόρινθος
-        <option value="http://live.Radioalphaomega.com:4008"/>11 Radio ALPHA OMEGA 90.4 MHz FM Χίος -48Kbps aacPlus-
-        <option value="http://live.Radioalphaomega.com:4006"/>11 Radio ALPHA OMEGA 90.4 MHz FM Χίος -96Kbps mp3-
-	<option value="http://83.170.89.19:9868/"/>12 Radio GodRadio
-        <option value="http://www.juststream.gr:8000/radio7.mp3"/>13 Radio 7 Χριστιανικό ραδιόφωνο
-        <option value="http://s16.myradiostream.com:4132"/>14 Radio Το Φως Χ.Δ.Δ.Δ.Β
-	<option value="http://78.129.234.163:33743"/>15 Radio Χαρά
-
-        <option value="" />===========WORLD WIDE CHRISTIAN CHANNELS============
-        <option value="http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC"/>Emmanuel TV
-        <option value="http://wowzaprodhd59-lh.akamaihd.net/i/01347fca_1@120303/index_921600_av-p.m3u8?sd=10&rebase=on"/>Prophetic Channel
-        <option value="http://www.christianpowerpraise.net/CPPDN/live/high.asx"/>-Music Only- Radio ChristianPowerPraise.Net
-        <option value="http://www.wordoftruthRadio.com/listen_acoustic.wax"/>-Music Only- Radio Word of Truth Acoustic Praise Cafe
-        <option value=" " />======================ΔΙΑΦΟΡΑ=======================
-        <option value="http://k007.kiwi6.com/hotlink/bdpk9wbv17/2013-11-30_Ko_.mp3"/>Το πνεύμα της απόρριψης -Koυλούρης Θέμης-
-        <option value="" />====================Αγία Γραφή========================
-        <option value="https://cdn.rawgit.com/grchannels/data/e53aeddd/ot.m3u"/> Ανάγνωση Παλαιάς Διαθήκης στη δημοτική
-        <option value="https://cdn.rawgit.com/grchannels/data/e53aeddd/nt.m3u"/> Ανάγνωση Καινής Διαθήκης στη δημοτική
-        <option value="https://cdn.rawgit.com/grchannels/data/e53aeddd/otps.m3u"/> Ψαλμοί του Δαυίδ στη δημοτική με συνοδεία μουσικής
-
-</select><br />
-</p>
-</div>
+<iframe src="https://free.timeanddate.com/clock/i77ty73k/n1428/tlgr17/fn7/fs20/fc09f/tct/pct/ftb/tt0/th1" frameborder="0" width="437" height="30" allowtransparency="true"></iframe>
 
 <p><a href="https://player.fastcast4u.com/afreeapo" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
@@ -169,11 +113,21 @@ autostart="1">
 
 <input type="button" value="Ε.Ε.Ε. Βόλου" onclick="window.open(&#39;https://www.youtube.com/channel/UCusu9HCsvYfbNPtA_W9KQ8A/live?autoplay=1&#39;,&#39;Ελληνική Ευαγγελική Εκκλησία Βόλου&#39;,&#39;width=480,height=400&#39;)" />
 
-<p> World Wide Christian Networks </p>
+                                                                       <p> World Wide Christian Networks </p>
 
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="Love World USA" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f81cae1fec646c6e84b7c2003c6e42531b61a8ca/LoveWorld_USA.html&#39;,&#39;Love World USA&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Love World Plus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/2b5d200d4ffd0ac5566535139aacc32f4079e0d1/LoveWorld_Plus.html&#39;,&#39;Love World Plus&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Love World SAT" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f438e7b682e84f747244fcb94580a8a073f564c6/LoveWorld_SAT.html&#39;,&#39;Love World SAT&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Love World UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/9bd85e94f0ab0aa04543151ca0aebe90e3e0aee3/LoveWorld_UK.html&#39;,&#39;Love World UK&#39;,&#39;width=580,height=350&#39;)" />
+
+
+
+<p><input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/97c1b09cd0ec0b2e46e5c06d96e13463e1108a70/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -182,6 +136,8 @@ autostart="1">
 <input type="button" value="TBN HD" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-live&#39;,&#39;TBN HD&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="TBN UK" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-uk&#39;,&#39;TBN UK&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10a3e094938b6944db52d2d1e1691948361a85dc/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
 
 
@@ -195,7 +151,7 @@ autostart="1">
 
 <input type="button" value="Lakewood Church" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10a3e094938b6944db52d2d1e1691948361a85dc/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Salsa" onclick="window.open(&#39;https://watch.tbn.tv/videos/salsa&#39;,&#39;SALSA&#39;,&#39;width=550,height=480&#39;)" />
 
 
 
@@ -213,23 +169,22 @@ autostart="1">
 
 <input type="button" value="Pastor Chris" onclick="window.open(&#39;https://www.youtube.com/channel/UCOGnLDJABiBR8RDNbXbRqgA/live?autoplay=1&#39;,&#39;Pastor Chris&#39;,&#39;width=580,height=350&#39;)" />
 
-
 <input type="button" value="Ed Citronnelli Ministries" onclick="window.open(&#39;https://www.youtube.com/user/WHIMinistries/live?autoplay=1&#39;,&#39;Ed Citronnelli Ministries&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Salsa" onclick="window.open(&#39;https://watch.tbn.tv/videos/salsa&#39;,&#39;SALSA&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="Impuls" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Bibel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-
 <p><input type="button" value="Johnchi Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;AGCOM&#39;,&#39;width=580,height=350&#39;)" />
+
+
 
 <input type="button" value="Christopher Orji Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCVuG_fLElXxA0KIsvcUOj0Q/live?autoplay=1&#39;,&#39;Christopher Orji Ministries&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Joseph Prince Ministries" onclick="window.open(&#39;https://www.youtube.com/user/JosephPrinceOnline/live?autoplay=1&#39;,&#39;Joseph Prince Ministries&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Impuls" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
-
 <input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+
 
 <p><input type="button" value="Celebration TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCrF3Zv8PGIT4R4f2LMQvQSQ/live?autoplay=1&#39;,&#39;Celebration TV&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -237,7 +192,24 @@ autostart="1">
 
 <input type="button" value="The Good News Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC-tEjU3PrA8aGhxa5WpaJwA/live?autoplay=1&#39;,&#39;Prophet Uebert Angel&#39;,&#39;width=580,height=350&#39;)" />
 
+<input type="button" value="Christ Mercyland" onclick="window.open(&#39;https://www.youtube.com/channel/UCwdHnoBwdoccyGV1bpetYWg/live?autoplay=1&#39;,&#39;Christ Mercyland &#39;,&#39;width=580,height=350&#39;)" />
+
+<p><input type="button" value="Planetshakers TV" onclick="window.open(&#39;https://www.youtube.com/user/planetshakerstv/live?autoplay=1&#39;,&#39;Planetshakers TV&#39;,&#39;width=480,height=400&#39;)" />
+
 <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
+
+
+
+
+<!-- <input type="button" value="Holy Spirit TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/The_Holy_Spirit_TV.html&#39;,&#39;The Holy Spirit TV&#39;,&#39;width=580,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="JUCE" onclick="window.open(&#39;https://watch.tbn.tv/videos/juce&#39;,&#39;JUCE TV&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!--  -->
+
+<!--  -->
+
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
 <!--                                                       "  B      A      C      K      U      P  "                                        -->
 
@@ -550,4 +522,3 @@ autostart="1">
 	
 </body>
 </html>
-	
