--- a/index.html
+++ b/index.html
@@ -198,13 +198,14 @@
 
 <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
 
+<input type="button" value="Kenneth Copeland" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/10adca2bc9d5da15e0c1677a992144e7c46b73bb/Kenneth_Copeland_Ministries.html&#39;,&#39;Kenneth Copeland&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Guillermo Maldonado" onclick="window.open(&#39;https://www.youtube.com/channel/UCedqUkPC9Q7Rfau96oQkUTw/live?autoplay=1&#39;,&#39;Apostle Guillermo Maldonado&#39;,&#39;width=580,height=350&#39;)" />
 
 
+<p><input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
 
-<!-- <input type="button" value="Holy Spirit TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/The_Holy_Spirit_TV.html&#39;,&#39;The Holy Spirit TV&#39;,&#39;width=580,height=350&#39;)" /> -->
-
-<!-- <input type="button" value="JUCE" onclick="window.open(&#39;https://watch.tbn.tv/videos/juce&#39;,&#39;JUCE TV&#39;,&#39;width=550,height=480&#39;)" /> -->
-
+   
 <!--  -->
 
 <!--  -->
