--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <a href="http://ekxeradio.gr/shoutcast/" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=240, width=550, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a>
 
-<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/9ba686e2fdae8d65cb03655ff147e98b471fcac3/Radio Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
 <p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Alpha Omega Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
 
@@ -61,7 +61,7 @@
 
 <p><input type="button" value="ΕΑΕΠ Γλυφάδας" onclick="window.open(&#39;https://www.youtube.com/channel/UCJkUc3VAsJ3X2LQMKvAiKsw/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ ΚΩ" onclick="window.open(&#39;https://www.youtube.com/channel/UCmfWvWJH_vpdRqVFWPXyEuQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ ΚΩ&#39;,&#39;width=500,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -69,7 +69,9 @@
 
 <input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://www.youtube.com/channel/UChE05fmTBXxHp4867xKDCTg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Πτολεμαίων" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Θεσσαλονίκης" onclick="window.open(&#39;https://www.youtube.com/user/eaepthess/live?autoplay=1&#39;,&#39;Thessalonians&#39;,&#39;width=550,height=480&#39;)" />
+
+<input type="button" value="ΕΑΕΠ Πτολεμαίων" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://www.youtube.com/channel/UChGGOzoC9Qy0bzpsyKuD9FQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Καλλιθέας&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -77,7 +79,6 @@
 
 <input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Λευκωσίας" onclick="window.open(&#39;https://www.youtube.com/channel/UC-fb9xpm7qyKVwbcV2V8E1A/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
 <p><input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -119,11 +120,11 @@
 
 <input type="button" value="Love World USA" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f81cae1fec646c6e84b7c2003c6e42531b61a8ca/LoveWorld_USA.html&#39;,&#39;Love World USA&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Love World Plus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/2b5d200d4ffd0ac5566535139aacc32f4079e0d1/LoveWorld_Plus.html&#39;,&#39;Love World Plus&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Love World Plus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/30bd8d8bc29a4fbc2108f6157399219fb84050e8/LoveWorld_Plus.html&#39;,&#39;Love World Plus&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Love World SAT" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f438e7b682e84f747244fcb94580a8a073f564c6/LoveWorld_SAT.html&#39;,&#39;Love World SAT&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Love World UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/9bd85e94f0ab0aa04543151ca0aebe90e3e0aee3/LoveWorld_UK.html&#39;,&#39;Love World UK&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Love World UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/0bc5f51f601f076bbec83e9e4b4cc50cd3855be8/LoveWorld_UK.html&#39;,&#39;Love World UK&#39;,&#39;width=580,height=350&#39;)" />
 
 
 
@@ -155,11 +156,12 @@
 
 
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/6fb68e9ec94cc1b53c10dc3a14ebae5343cff250/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/2e5bc6372226e97a04295fca8ba016e712a164fc/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=650,height=350&#39;)" />
 
 <input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Creflo Dollar 24/7" onclick="window.open(&#39;http://www.lightcast.com/embed/player.php?id=14664&type=live&tvButtonID=worldchangers&ratio=16:9&autoStart=1&playlistPos=inside&playlistSize=100&skinColor=&width=600&height=380&#39;,&#39;Creflo Dollar&#39;,&#39;width=600,height=380&#39;)" />
+<input type="button" value="Miracle Channel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/befadd0cee0b4e431f021b8e2e08c483dbb4343b/miracle_channel.html&#39;,&#39;Joyce Meyer&#39;,&#39;width=600,height=380&#39;)" />
+
 
 <input type="button" value=" World Changers" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -176,7 +178,6 @@
 <input type="button" value="Bibel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/cf2f6dec174b93cd67d0070aeb6356954586eab9/Bibel_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <p><input type="button" value="Johnchi Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;AGCOM&#39;,&#39;width=580,height=350&#39;)" />
-
 
 
 <input type="button" value="Christopher Orji Ministries" onclick="window.open(&#39;https://www.youtube.com/channel/UCVuG_fLElXxA0KIsvcUOj0Q/live?autoplay=1&#39;,&#39;Christopher Orji Ministries&#39;,&#39;width=580,height=350&#39;)" />
@@ -202,8 +203,26 @@
 
 <input type="button" value="Guillermo Maldonado" onclick="window.open(&#39;https://www.youtube.com/channel/UCedqUkPC9Q7Rfau96oQkUTw/live?autoplay=1&#39;,&#39;Apostle Guillermo Maldonado&#39;,&#39;width=580,height=350&#39;)" />
 
+<p><input type="button" value="3ABN" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn.html&#39;,&#39;3ABN&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="3ABN International" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_international.html&#39;,&#39;3ABN International&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Proclaim" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_proclaim.html&#39;,&#39;3ABN Proclaim&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Dare to Dream" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_daretodream.html&#39;,&#39;3ABN Dare to Dream&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="3ABN Praise Him" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/367a83b2493503959d88c1eace4a68edc9ad2188/3abn_praise_him.html&#39;,&#39;3ABN Praise Him&#39;,&#39;width=580,height=350&#39;)" />
+
+
+<p><input type="button" value="Hello LoveWorld" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/bed02c983def63f12e3ca52ef13825a11518fdb2/Hello_LoveWorld.html&#39;,&#39;Hello LoveWorld&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="King Jesus" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/80186c108a57d8d5bb4b7130c3a8cfedb85abda1/kingjesus.html&#39;,&#39;King Jesus Ministry&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="HisChannel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/f447a43f249eb40f05e7e7e4984fda28f903ee52/HisChannel.html&#39;,&#39;HisChannel&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="GLC TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/a6e94c82308ab278b2c292681f90530ca3461634/GLC_TV.html&#39;,&#39;GLC TV&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Inspiration TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/e75fa32855589628ed1d398bb3fe12c3c5bb4023/Inspiration_TV.html&#39;,&#39;Inspiration TV&#39;,&#39;width=580,height=350&#39;)" />
 
    
 <!--  -->
